[gd_scene load_steps=2 format=3 uid="uid://cfg0up4nynxx6"]

[ext_resource type="Script" uid="uid://8cpouvdhtyhb" path="res://scripts/component/research_beam.gd" id="1_pbm11"]

[node name="ResearchBeam" type="Area2D"]
collision_layer = 2
collision_mask = 16
monitorable = false
script = ExtResource("1_pbm11")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 50, -20, 50, 20)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
